fix even more files

--- a/cleaned/22.html
+++ b/cleaned/22.html
@@ -181,20 +181,17 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
+          <h1>
             Das Kulturhaus Süderelbe wird 35!
-          </h3>
-          <h3>
+          </h1>
+          <h2>
             Tag der offenen Tür
-          </h3>
+          </h2>
           <h3>
             am Samstag, den 30. Mai ab 14 Uhr
           </h3>
           <p>
-            Am Samstag, den 30. Mai, veranstaltet das Kulturhaus Süderelbe ab 14 Uhr seinen jährlichen
-          </p>
-          <p>
-            "Tag der offenen Tür" mit Ausstellungen von Kursleitern und KursteilnehmerInnen aus dem Bereich bildende Kunst.
+            Am Samstag, den 30. Mai, veranstaltet das Kulturhaus Süderelbe ab 14 Uhr seinen jährlichen "Tag der offenen Tür" mit Ausstellungen von Kursleitern und KursteilnehmerInnen aus dem Bereich bildende Kunst.
           </p>
           <p>
             Die Trommelgruppe des Kulturhauses eröffnet mit Robert Laryea um 14 Uhr den Tag, Bettina Sehlbach und Dimitar Georgiev haben ihren gemeinsamen Auftritt an Klavier und Saxophon, und unsere alten Freunde und langjährigen Begleiter durch unsere Sommerfeste, die "Geilen Partyvirtuosen" mit Kai Lüdemann am Bass und Claudia Lüdefrau am Saxophon, spielen auf!
@@ -206,11 +203,10 @@
             Das leibliche Wohl unserer Gäste liegt dem Kulturhaus-Team traditionell am Herzen: Es werden wieder Kaffee, Kuchen, Grill und Getränke angeboten. Mit den Kuchenspenden finanziert der Verein die Musikauftritte.
           </p>
           <p>
-            Wir freuen uns auf zahlreiche Gäste, die als Freunde und Bekannte von KursteilnehmerInnen,
+            Wir freuen uns auf zahlreiche Gäste, die als Freunde und Bekannte von KursteilnehmerInnen, als Kolleginnen und Kollegen, als Partner oder als neue Gesichter nur mal schauen möchten.Lassen Sie uns gemeinsam einen schönen Geburtstag feiern!
           </p>
-          <p>
-            als Kolleginnen und Kollegen, als Partner oder als neue Gesichter nur mal schauen möchten.Lassen Sie uns gemeinsam einen schönen Geburtstag feiern!
-          </p><img src="resources/_wsb_510x763_TdoffT$C3$BCr_300515.jpg" height="763" width="510" border="0">
+
+          <img src="resources/_wsb_510x763_TdoffT$C3$BCr_300515.jpg">
         </td>
       </tr>
     </table>
