--- a/cleaned/23.html
+++ b/cleaned/23.html
@@ -187,12 +187,12 @@
           <h3 align="center">
             am 21. Oktober um 19.00 Uhr
           </h3>
-          <table width="483">
+          <table>
             <tbody>
               <tr>
                 <td>
                   <h3>
-                    <img src="resources/_wsb_463x656_Kulturpinsel.jpg" width="463" height="656" border="0">
+                    <img src="resources/_wsb_463x656_Kulturpinsel.jpg">
                   </h3>
                 </td>
               </tr>
