--- a/cleaned/24.html
+++ b/cleaned/24.html
@@ -181,7 +181,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img width="513" height="731" border="0" src="resources/_wsb_513x731_Mardon-1.jpg"> Folk-Concert mit den international bekannten Neugrabener Musikern Jan Mardon und Dylan Vaughn. Das Duo singt und spielt Folk von irisch-amerikanischen Traditionals bis hin zu mitreißenden Eigenkompositionen. Die beiden präsentieren zudem ihre neue CD. <a href="http://www.mardon.de">www.mardon.de</a>
+          <img src="resources/_wsb_513x731_Mardon-1.jpg"> Folk-Concert mit den international bekannten Neugrabener Musikern Jan Mardon und Dylan Vaughn. Das Duo singt und spielt Folk von irisch-amerikanischen Traditionals bis hin zu mitreißenden Eigenkompositionen. Die beiden präsentieren zudem ihre neue CD. <a href="http://www.mardon.de">www.mardon.de</a>
         </td>
       </tr>
     </table>
