--- a/cleaned/25.html
+++ b/cleaned/25.html
@@ -182,9 +182,9 @@
         </td>
         <td colspan="1" rowspan="1">
           <h3>
-            <img src="resources/_wsb_485x684_Hase_Ben.jpg" width="485" height="684" border="0">
+            <img src="resources/_wsb_485x684_Hase_Ben.jpg">
           </h3>
-          <table width="507">
+          <table>
             <tbody>
               <tr>
                 <td>
