--- a/cleaned/26.html
+++ b/cleaned/26.html
@@ -86,17 +86,17 @@
           <p>
             <b>Handpuppentheater mit und von Maya Raue</b>
           </p>
-          <table width="486">
+          <table>
             <tbody>
               <tr>
                 <td>
                   <p align="left">
-                    <img src="resources/_wsb_218x169_Kollin+Kl$C3$A4ff+f$C3$BCr+Webseite+und+Flyer.jpg" height="169" border="0" width="218">
+                    <img src="resources/_wsb_218x169_Kollin+Kl$C3$A4ff+f$C3$BCr+Webseite+und+Flyer.jpg">
                   </p>
                   <p align="left"></p>
                 </td>
                 <td>
-                  <img src="resources/_wsb_221x170_Maya+Raue_Puppenspielerin_web.jpg" height="170" border="0" width="221">
+                  <img src="resources/_wsb_221x170_Maya+Raue_Puppenspielerin_web.jpg">
                 </td>
               </tr>
             </tbody>
