--- a/cleaned/27.html
+++ b/cleaned/27.html
@@ -181,7 +181,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_532x375_Plakat_a4.jpg" height="375" border="0" width="532">
+          <img src="resources/_wsb_532x375_Plakat_a4.jpg">
           <h3>
             CHRISTIN NEDDENS' OCEANSIDE QUARTETT
           </h3>
