--- a/cleaned/28.html
+++ b/cleaned/28.html
@@ -181,7 +181,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_519x734_Plakat_2016rdz.jpg" height="734" border="0" width="519">
+          <img src="resources/_wsb_519x734_Plakat_2016rdz.jpg">
           <table>
             <tbody>
               <tr>
@@ -196,7 +196,7 @@
               </tr>
             </tbody>
           </table><a href="http://www.johannes-kirchberg.de/wie-frueher-nur-besser/">www.johannes-kirchberg.de</a>
-          <table width="494">
+          <table>
             <tbody>
               <tr>
                 <td valign="top">
@@ -224,7 +224,7 @@
           </p>
           <p>
             (*plus 10% Vvk-Gebühr).
-          </p>Abendkasse: € 12,- <img src="resources/_wsb_192x64_Kulturtage2.jpg" height="64" border="0" width="192">
+          </p>Abendkasse: € 12,- <img src="resources/_wsb_192x64_Kulturtage2.jpg">
         </td>
       </tr>
     </table>
