--- a/cleaned/29.html
+++ b/cleaned/29.html
@@ -189,7 +189,7 @@
             <tbody>
               <tr>
                 <td>
-                  <img src="resources/_wsb_499x708_Seite1aus+werbeflyer-preview3.jpg" width="499" height="708" border="0"> <img src="resources/_wsb_503x708_Seite2+aus+werbeflyer-preview3.jpg" width="503" height="708" border="0">
+                  <img src="resources/_wsb_499x708_Seite1aus+werbeflyer-preview3.jpg"> <img src="resources/_wsb_503x708_Seite2+aus+werbeflyer-preview3.jpg">
                   <p>
                     Neugraben ist seit 500 Jahren nachweislich besiedelt.
                   </p>
@@ -212,7 +212,7 @@
           <p>
             <b>Kommen Sie und feiern Sie mit!</b>
           </p>
-          <table width="492">
+          <table>
             <tbody>
               <tr>
                 <td>
@@ -220,7 +220,7 @@
                 </td>
               </tr>
             </tbody>
-          </table><img src="resources/_wsb_487x425_Wegbeschreibung.jpg" width="487" height="425" border="0">
+          </table><img src="resources/_wsb_487x425_Wegbeschreibung.jpg">
         </td>
       </tr>
     </table>
