--- a/cleaned/30.html
+++ b/cleaned/30.html
@@ -183,7 +183,7 @@
         <td colspan="1" rowspan="1">
           <h3>
             Ein bunter Strauß voll Leben
-          </h3><img src="resources/_wsb_484x338_Flyer_ein+Srau$C3$9F_+$282$29+1.jpg" height="338" width="484" border="0">
+          </h3><img src="resources/_wsb_484x338_Flyer_ein+Srau$C3$9F_+$282$29+1.jpg">
           <p>
             Regie: Lars Ceglecki
           </p>
