--- a/cleaned/32.html
+++ b/cleaned/32.html
@@ -185,7 +185,7 @@
             Abi Wallenstein & Bluesculture featuring Steve Baker & Martin Röttger
           </h3>
           <p>
-            <img src="resources/_wsb_549x389_bc_photo4_m_pollert_web.jpg" width="549" height="389" border="0">
+            <img src="resources/_wsb_549x389_bc_photo4_m_pollert_web.jpg">
           </p>
           <h1>
             Am 22. Januar 2016 um 20.00 Uhr
