--- a/cleaned/33.html
+++ b/cleaned/33.html
@@ -186,7 +186,7 @@
           </h3>
           <h3>
             Am 31. Okt. 2015 um 19.30 Uhr
-          </h3><img src="resources/_wsb_514x727_Die+Da_redz.jpg" width="514" height="727" border="0">
+          </h3><img src="resources/_wsb_514x727_Die+Da_redz.jpg">
           <p>
             "Die da" ist eine Obdachlose, die dem Publikum mit oft unfreiwilligem Humor
           </p>
