--- a/cleaned/34.html
+++ b/cleaned/34.html
@@ -80,22 +80,22 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table width="437">
+          <table>
             <tbody>
               <tr>
                 <td valign="top">
-                  <img src="resources/_wsb_125x97_KInderbasteln_red.jpg" width="125" height="97" border="0">
+                  <img src="resources/_wsb_125x97_KInderbasteln_red.jpg">
                 </td>
                 <td valign="top">
-                  <img src="resources/_wsb_137x97_Markes+Bilder+110.jpg" width="137" height="97" border="0">
+                  <img src="resources/_wsb_137x97_Markes+Bilder+110.jpg">
                 </td>
                 <td valign="top">
-                  <img src="resources/_wsb_132x97_T$C3$B6pfern+web+15-red.jpg" width="132" height="97" border="0">
+                  <img src="resources/_wsb_132x97_T$C3$B6pfern+web+15-red.jpg">
                 </td>
               </tr>
             </tbody>
           </table>
-          <table width="416">
+          <table>
             <tbody>
               <tr>
                 <td>
