--- a/cleaned/35.html
+++ b/cleaned/35.html
@@ -91,7 +91,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table width="469">
+          <table>
             <tbody>
               <tr>
                 <td valign="top">
