--- a/cleaned/36.html
+++ b/cleaned/36.html
@@ -181,7 +181,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <b>FÜR GRUPPEN AUSVERKAUFT!</b> Eintritt für einzelne Besucher noch möglich <img width="514" border="0" height="725" src="resources/_wsb_514x725_K$C3$B6nigin.jpg">
+          <b>FÜR GRUPPEN AUSVERKAUFT!</b> Eintritt für einzelne Besucher noch möglich <img src="resources/_wsb_514x725_K$C3$B6nigin.jpg">
           <h3>
             Erzähltheater für Klein und Gross ab 4 Jahren
           </h3>
