--- a/cleaned/37.html
+++ b/cleaned/37.html
@@ -91,7 +91,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_500x670_Kinderangebotepdf.pdf16.jpg" width="500" height="670" border="0">
+          <img src="resources/_wsb_500x670_Kinderangebotepdf.pdf16.jpg">
         </td>
       </tr>
     </table>
