--- a/cleaned/38.html
+++ b/cleaned/38.html
@@ -182,8 +182,8 @@
         </td>
         <td colspan="1" rowspan="1">
           <p>
-            <img width="509" border="0" height="741" src="resources/_wsb_509x741_Plakat_web.jpg">
-          </p><img width="491" border="0" height="687" src="resources/Kindertheater_Flyer_Mario_final.jpg">
+            <img src="resources/_wsb_509x741_Plakat_web.jpg">
+          </p><img src="resources/Kindertheater_Flyer_Mario_final.jpg">
         </td>
       </tr>
     </table>
