--- a/cleaned/41.html
+++ b/cleaned/41.html
@@ -182,7 +182,7 @@
         </td>
         <td colspan="1" rowspan="1">
           <p>
-            <img width="519" border="0" height="730" src="resources/_wsb_519x730_Plaka_rdz.jpg">
+            <img src="resources/_wsb_519x730_Plaka_rdz.jpg">
           </p>
           <p>
             Zu der Aquarellgruppe <b>"Kultur</b><b>Pinsel"</b> des Kulturhauses gehören z.Z. 14 begeisterte Malerinnen und Maler. Mit dem Gedanken "Diese Zeit gehört mir" trifft sich die Gruppe mittwochabends im Kulturhaus, um bei der freischaffenden Künstlerin Elke Nack-Karstens die Kunst des Aquarellierens zu erarbeiten.
