--- a/cleaned/42.html
+++ b/cleaned/42.html
@@ -183,7 +183,7 @@
         <td colspan="1" rowspan="1">
           <p>
             <b>Jubiläumsjahr 2016</b>
-          </p><img src="resources/_wsb_432x230_500J_Fo$CC$88rdervereinNeugr_Endfassung_web.jpg" width="432" height="230" border="0"> Informationen über die Jubiläumsjahr-Veranstaltungen finden Sie unter <b><a href="43.html"><b>"Historische Rundgänge"</b></a></b>und <a href="29.html"><b>"Historisches Sommerfest am 25. Juni"</b></a>
+          </p><img src="resources/_wsb_432x230_500J_Fo$CC$88rdervereinNeugr_Endfassung_web.jpg"> Informationen über die Jubiläumsjahr-Veranstaltungen finden Sie unter <b><a href="43.html"><b>"Historische Rundgänge"</b></a></b>und <a href="29.html"><b>"Historisches Sommerfest am 25. Juni"</b></a>
         </td>
       </tr>
     </table>
