--- a/cleaned/43.html
+++ b/cleaned/43.html
@@ -193,7 +193,7 @@
           </p>
           <p>
             <b><u>Samstag, 28. Mai</u> <u>16 um 14.30 Uhr:</u></b>
-          </p><img src="resources/_wsb_430x856_16-04-25+Rundgang+Dorfkern+28.5.2016.jpg" width="430" height="856" border="0"> <b><u>Samstag, 11. Juni 16 um 15.00 Uhr:</u></b> <img src="resources/_wsb_426x844_16-05-04+Rundgang+Stolpersteine+11_rdz.jpg" width="426" height="844" border="0"> Sonntag, 17. Juli 16 um 11.00 Uhr: <img src="resources/_wsb_425x843_16-05-02+Rundgang+Arch$C3$A4ologischer+Wanderpfad.jpg" width="425" height="843" border="0"> <b>Anmeldung ab 1. Juli 2016 bitte unter info@suederelbe-archiv.de</b>! Vielen Dank. Bitte beachten Sie: <b>Es stehen aktuell keine Plätze mehr zur Verfügung (So, 10.07.2016)</b> - der Rundgang ist ausgebucht.
+          </p><img src="resources/_wsb_430x856_16-04-25+Rundgang+Dorfkern+28.5.2016.jpg"> <b><u>Samstag, 11. Juni 16 um 15.00 Uhr:</u></b> <img src="resources/_wsb_426x844_16-05-04+Rundgang+Stolpersteine+11_rdz.jpg"> Sonntag, 17. Juli 16 um 11.00 Uhr: <img src="resources/_wsb_425x843_16-05-02+Rundgang+Arch$C3$A4ologischer+Wanderpfad.jpg"> <b>Anmeldung ab 1. Juli 2016 bitte unter info@suederelbe-archiv.de</b>! Vielen Dank. Bitte beachten Sie: <b>Es stehen aktuell keine Plätze mehr zur Verfügung (So, 10.07.2016)</b> - der Rundgang ist ausgebucht.
         </td>
       </tr>
     </table>
