--- a/cleaned/44.html
+++ b/cleaned/44.html
@@ -80,7 +80,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/Refuuges_welcome.jpg" width="425" height="220" border="0">
+          <img src="resources/Refuuges_welcome.jpg">
           <p>
             <b>In Kooperation mit der Initiative "Willkommen in Süderelbe" findet jeden Montag das "Café Welcome" statt. In der Zeit von 15-18 Uhr öffnet dazu das Offene Atelier mit der Kulturhaus-Künstlerin Gabriele Wendland und die Tanzwerkstatt mit Tanzpädagogin Wiebke Heinrich.</b>
           </p>
