--- a/cleaned/45.html
+++ b/cleaned/45.html
@@ -182,7 +182,7 @@
         </td>
         <td colspan="1" rowspan="1">
           <p align="center">
-            <img width="467" height="657" border="0" src="resources/Dirk+Janssen_Vortrag_rdz.jpg">
+            <img src="resources/Dirk+Janssen_Vortrag_rdz.jpg">
           </p>
           <h3 align="center">
             Reisevortrag mit Fotoshow
@@ -193,7 +193,7 @@
           <p>
             Gerne eine Spende zugunsten „neugraben fairändern“.
           </p>
-          <table width="508">
+          <table>
             <tbody>
               <tr>
                 <td>
