--- a/cleaned/46.html
+++ b/cleaned/46.html
@@ -198,7 +198,7 @@
           </p>
           <p>
             <b>Dörte Ellerbrock und Dieter Wehrbrink lesen mit verteilten Rollen die zweite Hälfte des Briefwechsels von Sofia und Leonid Tolstoi.</b>
-          </p><img src="resources/tolstoi+und+frau.jpg" width="520" height="250" border="0"> <b>Im Foyer des Kulturhauses Süderelbe, Am Johannisland 2, 21147 Hamburg Barrierefrei mit dem Fahrstuhl zu erreichen. Der Eintritt ist frei!</b>
+          </p><img src="resources/tolstoi+und+frau.jpg"> <b>Im Foyer des Kulturhauses Süderelbe, Am Johannisland 2, 21147 Hamburg Barrierefrei mit dem Fahrstuhl zu erreichen. Der Eintritt ist frei!</b>
         </td>
       </tr>
     </table>
