--- a/cleaned/49.html
+++ b/cleaned/49.html
@@ -181,7 +181,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_514x728_Tonali_KH_16.jpg" width="514" height="728" border="0">
+          <img src="resources/_wsb_514x728_Tonali_KH_16.jpg">
           <p>
             <a href="http://www.tonali.de/zwoelf-orte/">www.tonali.de</a>
           </p>
@@ -204,7 +204,7 @@
             Die Liste seiner künstlerischen Laufbahn ist lang, obwohl er erst 1996 geboren wurde. U.a. war er 2014/15 Jungstudent an der Musikhochschule Frankfurt am Main in der Klavierklsse von Prof. Oliver Kern, tourte mit Konzerten auch nach Chile, Finnland, Frankreich, Italien und Tschechien, gewann etliche Preise (z.B. ist er achtfacher Bundespreisträger von "Jugend Musiziert" und gewann den ersten Preis 2012 des Tonkünstlerwettbewerbs Baden-Würtemberg).
           </p>
           <p align="center">
-            <img src="resources/tonali+soos.jpg" width="323" height="430" border="0">
+            <img src="resources/tonali+soos.jpg">
           </p>
           <p align="center"></p>
           <p align="center">
