--- a/cleaned/5.html
+++ b/cleaned/5.html
@@ -91,76 +91,19 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
-            1980 - 2017
-          </h3>
-          <p>
-            37 Jahre Kulturhaus Süderelbe e.V.
-          </p>
-          <table width="510">
-            <tbody>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_139x188_Web+15_1.jpg" width="139" height="188" border="0">
-                </td>
-                <td>
-                  <img src="resources/_wsb_139x196_KHS1+099-A2.jpg" width="139" height="196" border="0">
-                </td>
-                <td>
-                  <img src="resources/_wsb_137x194_Web+15_2.jpg" width="137" height="194" border="0">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <p>
-            <b>Semesterbeginn am 01. Februar und am 01. September</b>
-          </p>
-          <table width="512">
-            <tbody>
-              <tr>
-                <td valign="top">
-                  <p>
-                    Ein neues Semester mit zahlreichen Möglichkeiten, sich unter fachkundiger Anleitung kreativ zu betätigen, startet am 1. September´16. Zu zivilen Preisen kann hier im Bereich bildende Kunst gemalt, gezeichnet, geschnitzt oder getöpfert werden. Im Musikbereich und im Bereich Bewegung findet ebenfalls wöchentlicher Unterricht statt.
-                  </p>Haben Sie einmal ein Instrument gelernt und es dann beiseite gelegt? Oder in der Schule gemalt und nie wieder einen Pinsel angefasst? Oder mit Leidenschaft getanzt?
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p>
-                    Alte Fähigkeiten neu zu entdecken oder mal etwas ganz Neues auszuprobieren,
-                  </p>
-                  <p>
-                    dazu gibt es im Kulturhaus Süderelbe jede Menge Gelegenheiten. Die familiäre
-                  </p>
-                  <p>
-                    Atmosphäre lässt Ängste schnell verschwinden, denn Menschen jeden Alters
-                  </p>werden hier so akzeptiert, wie sie sind.
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p>
-                    Kursdauer /Semester: 18 x 3 Zeitstunden, wenn nicht anders angegeben.
-                  </p>
-                  <p>
-                    Alle Kurse exkl. Materialien. Alle Kurse sind sowohl für Anfänger als auch für Fortgeschrittene geeignet. Eine Probestunde kann vereinbart werden.
-                  </p>
-                  <p>
-                    Eine Ermäßigung der Gebühren ist nach Absprache möglich.
-                  </p>
-                  <p>
-                    <b>Das aktuelle Programmangebot finden Sie links unter</b>
-                  </p>
-                  <p>
-                    <b>"Kursprogramm 2016/17"</b>
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <p>
-            <img src="tinc%3Fkey=Rmys29oQ&no=1" width="89" height="41">
-          </p>
+          <h1>37 Jahre Kulturhaus Süderelbe e.V.</h1>
+          <h2>1980 - 2017</h2>
+          <img src="resources/_wsb_139x188_Web+15_1.jpg">
+          <img src="resources/_wsb_139x196_KHS1+099-A2.jpg">
+          <img src="resources/_wsb_137x194_Web+15_2.jpg">
+          <h2>Semesterbeginn am 01. Februar und am 01. September
+          </h2>
+          <p>Ein neues Semester mit zahlreichen Möglichkeiten, sich unter fachkundiger Anleitung kreativ zu betätigen, startet am 1. September´16. Zu zivilen Preisen kann hier im Bereich bildende Kunst gemalt, gezeichnet, geschnitzt oder getöpfert werden. Im Musikbereich und im Bereich Bewegung findet ebenfalls wöchentlicher Unterricht statt</p>
+
+          <p>Haben Sie einmal ein Instrument gelernt und es dann beiseite gelegt? Oder in der Schule gemalt und nie wieder einen Pinsel angefasst? Oder mit Leidenschaft getanzt?</p>
+          <p>Alte Fähigkeiten neu zu entdecken oder mal etwas ganz Neues auszuprobieren, dazu gibt es im Kulturhaus Süderelbe jede Menge Gelegenheiten. Die familiäre Atmosphäre lässt Ängste schnell verschwinden, denn Menschen jeden Alters werden hier so akzeptiert, wie sie sind.</p>
+          <p>Kursdauer /Semester: 18 x 3 Zeitstunden, wenn nicht anders angegeben. Alle Kurse exkl. Materialien. Alle Kurse sind sowohl für Anfänger als auch für Fortgeschrittene geeignet. Eine Probestunde kann vereinbart werden. Eine Ermäßigung der Gebühren ist nach Absprache möglich.</p>
+          <p><b>Das aktuelle Programmangebot finden Sie links unter <a href="39.html">Kursprogramm 2016/17"</a></b></p>
         </td>
       </tr>
     </table>
