--- a/cleaned/50.html
+++ b/cleaned/50.html
@@ -112,7 +112,7 @@
           </p>
           <p>
             Eintritt frei <b>!</b>
-          </p><img src="resources/_wsb_487x345_Flyer_250617.jpg" height="345" width="487" border="0">
+          </p><img src="resources/_wsb_487x345_Flyer_250617.jpg">
           <p>
             ________________________________________________________________________________
           </p>
@@ -123,8 +123,8 @@
             Im Theater Zeppelin am 21. Mai 2017
           </p>
           <p>
-            <img src="resources/_wsb_526x369_TheaterZeppelin_web.jpg" height="369" width="526" border="0">
-          </p><img src="resources/_wsb_458x328_Fleyr_web.jpg" height="328" width="458" border="0">
+            <img src="resources/_wsb_526x369_TheaterZeppelin_web.jpg">
+          </p><img src="resources/_wsb_458x328_Fleyr_web.jpg">
         </td>
       </tr>
     </table>
