--- a/cleaned/51.html
+++ b/cleaned/51.html
@@ -187,27 +187,27 @@
           <h3>
             <b>von und mit Eberhard Apffelstaedt</b>
           </h3>
-          <table width="367">
+          <table>
             <tbody>
               <tr>
                 <td>
-                  <img src="resources/_wsb_166x266_Cover_finnenIII.jpg" width="166" height="266" border="0">
+                  <img src="resources/_wsb_166x266_Cover_finnenIII.jpg">
                 </td>
                 <td></td>
                 <td valign="top">
-                  <img src="resources/_wsb_166x269_Kuck_kuck.jpg" width="166" height="269" border="0">
+                  <img src="resources/_wsb_166x269_Kuck_kuck.jpg">
                 </td>
                 <td></td>
                 <td>
-                  <img src="resources/_wsb_167x266_Mehr_Finnen.jpg" width="167" height="266" border="0">
+                  <img src="resources/_wsb_167x266_Mehr_Finnen.jpg">
                 </td>
               </tr>
             </tbody>
           </table>
           <h3>
-            Am So, 07. Mai um 11.00 Uhr<a href="http://www.finnland.de/public/default.aspx?contentid=356582&nodeid=37052&culture=de-DE"><img src="resources/_wsb_95x82_suomifinland100-tunnus_sininen_rgb.jpg" width="95" height="82" border="0"></a>
+            Am So, 07. Mai um 11.00 Uhr<a href="http://www.finnland.de/public/default.aspx?contentid=356582&nodeid=37052&culture=de-DE"><img src="resources/_wsb_95x82_suomifinland100-tunnus_sininen_rgb.jpg"></a>
           </h3>
-          <table width="519">
+          <table>
             <tbody>
               <tr>
                 <td>
@@ -228,7 +228,7 @@
                 <td valign="top"></td>
                 <td valign="top"></td>
                 <td valign="top">
-                  <img src="resources/_wsb_109x147_02_Eberhard+Apffelstaedt_10-2016.jpg" width="109" height="147" border="0">
+                  <img src="resources/_wsb_109x147_02_Eberhard+Apffelstaedt_10-2016.jpg">
                 </td>
               </tr>
             </tbody>
@@ -250,7 +250,7 @@
           </p>
           <p>
             Im Anschluss an die Lesung steht der Autor für Diskussion und zum Signieren seiner Bücher zur Verfügung.
-          </p>Eine Veranstaltung in Kooperation mit der Deutsch-Finnishen-Gesellschaft (DFG) mit freundlicher Unterstützung durch Botschaft von Finnland in Berlin und Suomi Seura r.y. <img src="resources/_wsb_89x31_dfg_logo_blau.jpg" width="89" height="31" border="0"> <img src="resources/_wsb_91x69_sponsorilogo.jpg" width="91" height="69" border="0">
+          </p>Eine Veranstaltung in Kooperation mit der Deutsch-Finnishen-Gesellschaft (DFG) mit freundlicher Unterstützung durch Botschaft von Finnland in Berlin und Suomi Seura r.y. <img src="resources/_wsb_89x31_dfg_logo_blau.jpg"> <img src="resources/_wsb_91x69_sponsorilogo.jpg">
         </td>
       </tr>
     </table>
