--- a/cleaned/52.html
+++ b/cleaned/52.html
@@ -186,7 +186,7 @@
           </p>
           <p>
             "Zu zweit liest es sich am Schönsten", sagen Dörte Ellerbrock und Dieter Wehrbrink, die sich wunderbar ergänzen, wenn es um Stimme und Sprachrhythmus geht.
-          </p><img src="resources/_wsb_309x194_schwarz-wei$C3$9F.jpg" width="309" height="194" border="0">
+          </p><img src="resources/_wsb_309x194_schwarz-wei$C3$9F.jpg">
           <p>
             <b>Am 29.3.17 um 19 Uhr</b> lesen die beiden
           </p>
