--- a/cleaned/53.html
+++ b/cleaned/53.html
@@ -182,7 +182,7 @@
         </td>
         <td colspan="1" rowspan="1">
           <p>
-            <b><img src="resources/_wsb_213x362_Bettina_Dimitar_1.jpg" width="213" height="362" border="0"> <img src="resources/_wsb_249x364_Tag+der+offenen+T$C3$BCr+17.jpg" width="249" height="364" border="0"><img src="resources/_wsb_475x296_Sommerfest2012+075-30x20+$282$29.jpg" width="475" height="296" border="0"></b>
+            <b><img src="resources/_wsb_213x362_Bettina_Dimitar_1.jpg"> <img src="resources/_wsb_249x364_Tag+der+offenen+T$C3$BCr+17.jpg"><img src="resources/_wsb_475x296_Sommerfest2012+075-30x20+$282$29.jpg"></b>
           </p>
           <p>
             <b>Sonntag, den 7.5.17 von 14-19 Uhr</b>
