--- a/cleaned/54.html
+++ b/cleaned/54.html
@@ -181,7 +181,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_493x696_PartyKunst_rdz.jpg" height="696" width="493" border="0">
+          <img src="resources/_wsb_493x696_PartyKunst_rdz.jpg">
           <p>
             PartyKunst ist ein interkulturelles Kunstprojekt, das seit November 2016 in
           </p>
