--- a/cleaned/6.html
+++ b/cleaned/6.html
@@ -80,132 +80,53 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <a href="http://www.stadtkultur-hh.de">Stadtkultur Hamburg e.V</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <p>
-                    30 Jahre Stadtteilkultur:
-                  </p>
-                  <p>
-                    <a href="http://www.hamburg.de/stadtteilkultur/2091080/video-stadtteilkultur.html" target="_blank">Stadtteilkultur-Film von Ulrich Raatz</a>
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.neuwiedenthal.de">Leben im Neuwiedenthal</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.vereinigung-suederelbe.de">Vereinigung Süderelbe</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.buecherhallen.de/aw/home/standortliste~dl/neugraben/">Bücherhalle Neugraben</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.stevebaker.de/">Steve Baker</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.martinroettger.de" target="_blank">Martin Röttger</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://xn--kulturkreis-sderelbe-1ec.de/">Kulturkreis Süderelbe</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.jrwoehlke.de">Johanna Renate Wöhlke</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.eddywinkelmann.de">Eddy Winkelmann</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.sued-kultur.de/">SÜDKULTUR</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.heimattanz.de/">Ring für Heimattanz e.V.</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.chorverband-hh.de/">MGV "Sängerlust Scheideholz" v. 1919</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.chorverband-hh.de/">Damenchor Hamburg-Neugraben von 1951</a>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="http://www.plattdueuetsch-leevt.de/">Verein "Plattdüütsch leevt"</a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <ul>
+            <li>
+              <a href="http://www.stadtkultur-hh.de">Stadtkultur Hamburg e.V</a>
+            </li>
+            <li>30 Jahre Stadtteilkultur: <a href="http://www.hamburg.de/stadtteilkultur/2091080/video-stadtteilkultur.html" target="_blank">Stadtteilkultur-Film von Ulrich Raatz</a>
+              </p>
+            </li>
+            <li>
+              <a href="http://www.neuwiedenthal.de">Leben im Neuwiedenthal</a>
+            </li>
+            <li>
+              <a href="http://www.vereinigung-suederelbe.de">Vereinigung Süderelbe</a>
+            </li>
+            <li>
+              <a href="http://www.buecherhallen.de/aw/home/standortliste~dl/neugraben/">Bücherhalle Neugraben</a>
+            </li>
+            <li>
+              <a href="http://www.stevebaker.de/">Steve Baker</a>
+            </li>
+            <li>
+              <a href="http://www.martinroettger.de" target="_blank">Martin Röttger</a>
+            </li>
+            <li>
+              <a href="http://xn--kulturkreis-sderelbe-1ec.de/">Kulturkreis Süderelbe</a>
+            </li>
+            <li>
+              <a href="http://www.jrwoehlke.de">Johanna Renate Wöhlke</a>
+            </li>
+            <li>
+              <a href="http://www.eddywinkelmann.de">Eddy Winkelmann</a>
+            </li>
+            <li>
+              <a href="http://www.sued-kultur.de/">SÜDKULTUR</a>
+            </li>
+            <li>
+              <a href="http://www.heimattanz.de/">Ring für Heimattanz e.V.</a>
+            </li>
+            <li>
+              <a href="http://www.chorverband-hh.de/">MGV "Sängerlust Scheideholz" v. 1919</a>
+            </li>
+            <li>
+              <a href="http://www.chorverband-hh.de/">Damenchor Hamburg-Neugraben von 1951</a>
+            </li>
+            <li>
+              <a href="http://www.plattdueuetsch-leevt.de/">Verein "Plattdüütsch leevt"</a>
+            </li>
+          </ul>
         </td>
       </tr>
     </table>
