--- a/cleaned/7.html
+++ b/cleaned/7.html
@@ -181,24 +181,13 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p>
+          <h1>
             "Mit Künstlern arbeiten, von Künstlern lernen"
-          </p>
+          </h1>
           <p>
-            <img width="177" height="116" border="0" src="resources/_wsb_177x116_spiegel-Drache_einl128.jpg"><img width="170" height="116" border="0" src="resources/_wsb_170x116_spiegel-Drache_einl126.jpg"><img width="167" height="116" border="0" src="resources/_wsb_167x116_spiegel-Drache_einl1.jpg">
+            <img src="resources/_wsb_177x116_spiegel-Drache_einl128.jpg"><img src="resources/_wsb_170x116_spiegel-Drache_einl126.jpg"><img src="resources/_wsb_167x116_spiegel-Drache_einl1.jpg">
           </p>
-          <table>
-            <tbody>
-              <tr>
-                <td valign="middle">
-                  Mammad Oghatian, Kursleiter des Kulturhauses, arbeitet im Stadtteil in Kinder- und Jugendhilfeeinrichtungen und an der Gesamtschule Süderelbe. Wann immer wir zusätzliche Mittel für Projekte einwerben können, entstehen z.T. große Objekte, vom Künstler entworfen, nach seiner Anweisung mit Kindern und Jugendlichen in die Tat umgesetzt.
-                </td>
-              </tr>
-              <tr>
-                <td align="left"></td>
-              </tr>
-            </tbody>
-          </table>
+         <p>Mammad Oghatian, Kursleiter des Kulturhauses, arbeitet im Stadtteil in Kinder- und Jugendhilfeeinrichtungen und an der Gesamtschule Süderelbe. Wann immer wir zusätzliche Mittel für Projekte einwerben können, entstehen z.T. große Objekte, vom Künstler entworfen, nach seiner Anweisung mit Kindern und Jugendlichen in die Tat umgesetzt.</p>
         </td>
       </tr>
     </table>
