--- a/cleaned/9.html
+++ b/cleaned/9.html
@@ -80,7 +80,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p align="left"></p><img src="resources/_wsb_436x643_Titelbild+die-besten-jahre-liegen-noch-vor-uns.jpg" width="436" height="643" border="0">
+          <p align="left"></p><img src="resources/_wsb_436x643_Titelbild+die-besten-jahre-liegen-noch-vor-uns.jpg">
           <h3>
             „Unsere verheerte Welt braucht eine Therapie“
           </h3>
