--- a/cleaned/13.html
+++ b/cleaned/13.html
@@ -183,7 +183,7 @@
         <td>
           <h1>Cajon Bau&Spiel-Workshop</h1>
           <p>
-            <img src="resources/_wsb_282x267_Kachel+Sanna-20091022-578x-$C2$AEPollert-5x5.jpg" height="267" border="0" width="282">
+            <img src="resources/_wsb_282x267_Kachel+Sanna-20091022-578x-$C2$AEPollert-5x5.jpg">
           </p>
 
           <p><b>Am Sonntag, den 06.11.2016</b> findet wieder ein Cajon-Workshop mit Cajonbau und Cajonspielen statt.
