--- a/cleaned/3.html
+++ b/cleaned/3.html
@@ -181,98 +181,48 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_151x112_WEB+2012+KHaus.jpg" height="480" border="0" width="640">
-                </td>
-                <td>
-                  <img src="resources/_wsb_155x116_WEB+2012+KHaus2.jpg" height="480" border="0" width="640">
-                </td>
-                <td>
-                  <img src="resources/_wsb_157x115_WEB+2012HHaus3.jpg" height="480" border="0" width="563">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <h3>
-                    <img src="resources/_wsb_157x117_Kulturhaus+WEBArchiv.jpg" height="188" border="0" width="250">
-                  </h3>
-                </td>
-                <td>
-                  <h3>
-                    <img src="resources/_wsb_135x187_WEB+2012+KHaus+6.jpg" height="640" border="0" width="464">
-                  </h3>
-                </td>
-                <td>
-                  <img src="resources/_wsb_153x116_WEB+2012Khaus7.jpg" height="480" border="0" width="640">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_154x191_Unser-Ort-wurfzettel.WebArchiv.jpg" height="434" border="0" width="336">
-                </td>
-                <td>
-                  <img src="resources/_wsb_168x126_ausstellung+22.11.+121.jpg" height="336" border="0" width="448">
-                </td>
-                <td>
-                  <img src="resources/_wsb_136x194_Sommerfest+25.jpg" height="448" border="0" width="315">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <h3>
-                    <img src="resources/_wsb_165x122_WEB+2012KHaus5.jpg" height="480" border="0" width="640">
-                  </h3>
-                </td>
-                <td>
-                  <img src="resources/_wsb_136x182_fr$C3$BChfe3.jpg" height="448" border="0" width="336">
-                </td>
-                <td>
-                  <h3>
-                    <img src="resources/_wsb_162x120_IMG_1262.jpg" height="336" border="0" width="448">
-                  </h3>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_155x115_Sommerfest05.jpg" height="336" border="0" width="448">
-                </td>
-                <td>
-                  <img src="resources/_wsb_149x211_WEB+Archiv+KH.jpg" height="840" border="0" width="596">
-                </td>
-                <td>
-                  <img src="resources/_wsb_152x117_Web+Archiv+2.jpg" height="336" border="0" width="448">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_160x119_Web+Archiv+3.jpg" height="336" border="0" width="448">
-                </td>
-                <td>
-                  <img src="resources/_wsb_154x120_WEb+Archiv+4.jpg" height="336" border="0" width="448">
-                </td>
-                <td>
-                  <img src="resources/_wsb_162x121_Web+Archiv+5.jpg" height="336" border="0" width="448">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_155x117_Web+Archiv.jpg" height="336" border="0" width="448">
-                </td>
-                <td>
-                  <img src="resources/_wsb_134x179_Web+Archiv7.jpg" height="448" border="0" width="336">
-                </td>
-                <td>
-                  <img src="resources/_wsb_153x115_Web+Archiv+1.jpg" height="336" border="0" width="448">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <p>
-            Kulturhaus Süderelbe e.V. am Ehestorfer Heuweg 1980-2011
-          </p>
+        <h1>Kulturhaus Süderelbe e.V. am Ehestorfer Heuweg 1980-2011</h1>
+        <img src="resources/_wsb_151x112_WEB+2012+KHaus.jpg">
+
+        <img src="resources/_wsb_155x116_WEB+2012+KHaus2.jpg">
+
+        <img src="resources/_wsb_157x115_WEB+2012HHaus3.jpg">
+
+        <img src="resources/_wsb_157x117_Kulturhaus+WEBArchiv.jpg">
+
+        <img src="resources/_wsb_135x187_WEB+2012+KHaus+6.jpg">
+
+        <img src="resources/_wsb_153x116_WEB+2012Khaus7.jpg">
+
+        <img src="resources/_wsb_154x191_Unser-Ort-wurfzettel.WebArchiv.jpg">
+
+        <img src="resources/_wsb_168x126_ausstellung+22.11.+121.jpg">
+
+        <img src="resources/_wsb_136x194_Sommerfest+25.jpg">
+
+        <img src="resources/_wsb_165x122_WEB+2012KHaus5.jpg">
+
+        <img src="resources/_wsb_136x182_fr$C3$BChfe3.jpg">
+
+        <img src="resources/_wsb_162x120_IMG_1262.jpg">
+
+        <img src="resources/_wsb_155x115_Sommerfest05.jpg">
+
+        <img src="resources/_wsb_149x211_WEB+Archiv+KH.jpg">
+
+        <img src="resources/_wsb_152x117_Web+Archiv+2.jpg">
+
+        <img src="resources/_wsb_160x119_Web+Archiv+3.jpg">
+
+        <img src="resources/_wsb_154x120_WEb+Archiv+4.jpg">
+
+        <img src="resources/_wsb_162x121_Web+Archiv+5.jpg">
+
+        <img src="resources/_wsb_155x117_Web+Archiv.jpg">
+
+        <img src="resources/_wsb_134x179_Web+Archiv7.jpg">
+
+        <img src="resources/_wsb_153x115_Web+Archiv+1.jpg">
         </td>
       </tr>
     </table>
