--- a/cleaned/31.html
+++ b/cleaned/31.html
@@ -182,7 +182,7 @@
         </td>
         <td colspan="1" rowspan="1">
           <p align="center">
-            <img width="490" height="695" border="0" src="resources/_wsb_490x695_Mittsommernachtstango_web15.jpg">
+            <img src="resources/_wsb_490x695_Mittsommernachtstango_web15.jpg">
           </p>
           <p>
             Zur Filmhandlung:
