--- a/cleaned/4.html
+++ b/cleaned/4.html
@@ -181,25 +181,16 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table width="523">
-            <tbody>
-              <tr>
-                <td valign="top">
-                  Ferienprogramm für Kinder
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <b>In der ersten Woche der Sommerferien vom 24. bis zum 28. Juni 2013 können Kinder und Jugendliche am Ferienprogramm des Kulturhauses teilnehmen. Künstler des Hauses bieten Töpfern, T-Shirt-Druck, Mosaike herstellen, Figuren-Filzen (aus Wolle), Break- und Afro-Dance und einen Kunstausflug in die Kunsthalle Hamburg an. Kostenbeitrag pro Kind und pro Angebot ist € 1,-</b>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Das Ferienprogramm wird gefördert durch den Verfügungsfonds der integrierten Stadtteilentwicklung Neugraben und den Verfügungsfonds Neuwiedenthal in Zusammenarbeit mit dem Haus der Jugend und dem Spielhaus Neuwiedenthal.
-                </td>
-              </tr>
-            </tbody>
-          </table><img width="530" border="0" height="761" src="resources/_wsb_530x761_Ferienprogramm_13.jpg">
+          <h1>Ferienprogramm für Kinder</h1>
+
+          <p>In der ersten Woche der Sommerferien vom 24. bis zum 28. Juni 2013 können Kinder und Jugendliche am Ferienprogramm des Kulturhauses teilnehmen.</p>
+
+          <p>Künstler des Hauses bieten Töpfern, T-Shirt-Druck, Mosaike herstellen, Figuren-Filzen (aus Wolle), Break- und Afro-Dance und einen Kunstausflug in die Kunsthalle Hamburg an.</p>
+          <p>Kostenbeitrag pro Kind und pro Angebot ist 1,- €</p>
+
+          <p>Das Ferienprogramm wird gefördert durch den Verfügungsfonds der integrierten Stadtteilentwicklung Neugraben und den Verfügungsfonds Neuwiedenthal in Zusammenarbeit mit dem Haus der Jugend und dem Spielhaus Neuwiedenthal.</p>
+
+          <img src="resources/_wsb_530x761_Ferienprogramm_13.jpg">
         </td>
       </tr>
     </table>
