--- a/cleaned/47.html
+++ b/cleaned/47.html
@@ -181,7 +181,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_466x202_presse+bild.jpg" width="466" height="202" border="0">
+          <img src="resources/_wsb_466x202_presse+bild.jpg">
           <p>
             <b>Während der "Chinatime", mit der die Hansestadt Hamburg ihre langjährige Partnerschaft mit China feiert, finden drei Ausstellungen einer Künstlergruppe der Gesellschaft für Deutsch-Chinesischen-Kulturaustausch statt - eine davon im Kulturhaus Süderelbe.</b>
           </p>
@@ -193,7 +193,7 @@
           </p>
           <p>
             <b>Ausgestellt werden Zeichnungen, Grafiken, Fotografien Aquarelle sowie Mischtechniken im westlichen wie im traditionellen chinesischen Stil.</b>
-          </p><img src="resources/_wsb_364x381_rindfleisch_im_wok+wendland+watercolor+40+x+40+cm+$282$29.jpg" width="364" height="381" border="0"> <b>Vernissage am Montag, den 7.11.16 um 19.30 Uhr Ausstellung vom 8.11. bis 25.11.16 werktags von 10-20 Uhr</b> Werke der Künstlergruppe sind ebenfalls zu sehen im Kunsthaus an der Alster (Alsterchaussee 3, 20149 HH) in der Seemannsmission (Große Elbstraße 132, 22367 HH) 
+          </p><img src="resources/_wsb_364x381_rindfleisch_im_wok+wendland+watercolor+40+x+40+cm+$282$29.jpg"> <b>Vernissage am Montag, den 7.11.16 um 19.30 Uhr Ausstellung vom 8.11. bis 25.11.16 werktags von 10-20 Uhr</b> Werke der Künstlergruppe sind ebenfalls zu sehen im Kunsthaus an der Alster (Alsterchaussee 3, 20149 HH) in der Seemannsmission (Große Elbstraße 132, 22367 HH) 
         </td>
       </tr>
     </table>
