--- a/cleaned/55.html
+++ b/cleaned/55.html
@@ -80,7 +80,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_392x553_BGZ_Sommer23.617.jpg" height="553" width="392" border="0">
+          <img src="resources/_wsb_392x553_BGZ_Sommer23.617.jpg">
           <p>
             Das diesjährige Sommerfest des Bildungs- und Gemeinschaftszentrums Süderelbe wartet nicht nur mit einem bunten Programm auf dem Schulhof und vor dem BGZ auf, sondern ist wieder für eine Überraschung gut:
           </p>
