--- a/cleaned/8.html
+++ b/cleaned/8.html
@@ -80,97 +80,65 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <b>Kulturhaus Süderelbe e.V. * Am Johannisland 2 * 21147 Hamburg</b>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Anmeldungen und Infos: Tel.: 040 - 796 72 22
-                  <p>
-                    Fax: 040 - 796 00 48
-                  </p>
-                  <p>
-                    <a href="mailto:info@kulturhaus-suederelbe.de">Email: info@kulturhaus-suederelbe.de</a>
-                  </p>
-                  <p>
-                    Büro: Mo bis Fr 09:30 bis 14:30 Uhr, außer Mi
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table><a href="resources/Kursanm_14.pdf" target="_blank"><b>Anmeldeformular finden Sie hier zum Download</b></a>
+          <h1>Kontakt</h1>
+          <p>Kulturhaus Süderelbe e.V. | Am Johannisland 2 | 21147 Hamburg</p>
+          <h2>Anmeldungen und Infos</h2>
           <p>
-            <b>Kontodaten:</b>
+          Tel.: 040 - 796 72 22<br>
+          Fax: 040 - 796 00 48<br>
+          Email: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a><br>
+          Büro: Mo bis Fr 09:30 bis 14:30 Uhr, außer Mi
           </p>
+
+          <p><a href="resources/Kursanm_14.pdf" target="_blank"><b>Anmeldeformular finden Sie hier zum Download</b></a></p>
+          <h2>Kontodaten</h2>
           <p>
-            Konto Nr.: 1087 210 793, IBAN: DE25200505501087210793 bei der
-          </p>
-          <p>
-            Haspa, BLZ: 200 505 50, BIC: HASPDEHHXXX
-          </p>Das Team des Kulturhauses:
-          <table>
-            <tbody>
-              <tr>
-                <td valign="top">
-                  Jan Pastoors, Dipl.-Ing., Geschäftsführung <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Dörte Ellerbrock, Hauptamtl. Mitarbeiterin, künstlerische Leitung, Kursleitung, Projekte, Vernetzung, Öffentlichleitsarbeit <a href="mailto:doerte.ellerbrock@kulturhaus-suederelbe.de">doerte.ellerbrock@kulturhaus-suederelbe.de</a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Marketta Eksymä-Winkelmann, Kultur- und Bildungsmanagerin, Hauptamtl. Mitarbeiterin, Büro, Administration, Kursanm. <a href="mailto:marketta.eksymae@kulturhaus-suederelbe.de">marketta.eksymae@kulturhaus-suederelbe.de</a>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  <b>Zum Team gehören auch</b> alle Kurs- und ProjektleiterInnen im Rahmen des Kulturhaus-Angebtotes, die oft weit über den vereinbarten Umfang ehrenamtlich bei der Programmplanung und bei Realisierung und Durchführung einzelner Veranstaltungen mitwirken. <b>Herzlichen Dank auch an alle Vereinsmitglieder für ihren großen ehrenamtlichen Einsatz und Unterstützung!</b> <a href="resources/Beitritserkl$C3$A4rung_Einz_aktuell.pdf" target="_blank"><b>Antragsformular auf Mitgliedschaft in userem Verein finden Sie hier zum Download:</b></a>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <b>Der Vereinsvorstand</b> (Ehrenämter):
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Hannelore Bobeck-Nicculescu, 2. Vorsitzender
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Stephan Kaiser, 1. Vorsitzender
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Winfried Wöhlke, Schatzmeister
-                </td>
-              </tr>
-            </tbody>
-          </table>Impressum: Kulturhaus Süderelbe e.V. Vereinsregister: Amtsgericht Hamburg, VR Nr. 8326 Vertretungsberechtigt: Hannelore Bobeck-Niculescu, Stephan Kaiser Steuernr. 17/432/05266, Finanzamt Hamburg-Nord <b>Webseite:</b> Leila Marketta Eksymä und Dörte Ellerbrock Verantwortlich im Sinne des Pressegesetzes: Hannelore Bobeck-Niculsecu, Stephan Kaiser Alle Angaben auf dieser Internetseite dienen nur der Information. Sie erheben weder Anspruch auf Vollständigkeit, noch auf Richtigkeit. Änderungen bleiben vorbehalten.
-          <p>
-            <b>Haftungsauschuss:</b>
-          </p>
-          <table width="458">
-            <tbody>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_450x493_Disclaimer.jpg" width="450" height="493" border="0">
-                </td>
-              </tr>
-            </tbody>
-          </table><i>Quelle: <a href="http://www.e-recht.de/muster-disclaimer.htm">www.e-recht24.de</a></i>
+            Konto Nr.: 1087 210 793, IBAN: DE25200505501087210793 bei der<br>
+            Haspa, BLZ: 200 505 50, BIC: HASPDEHHXXX</p>
+
+          <h2>Das Team des Kulturhauses</h2>
+          <dl>
+            <dt>Jan Pastoors, Dipl.-Ing.</dt>
+            <dd>Geschäftsführung<dd>
+            <dd><a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a></dd>
+            <dt>Dörte Ellerbrock</dt>
+            <dd>Hauptamtl. Mitarbeiterin, künstlerische Leitung, Kursleitung, Projekte, Vernetzung, Öffentlichleitsarbeit</dd>
+            <dd><a href="mailto:doerte.ellerbrock@kulturhaus-suederelbe.de">doerte.ellerbrock@kulturhaus-suederelbe.de</a></dd>
+            <dt>Marketta Eksymä-Winkelmann</dt>
+            <dd>Kultur- und Bildungsmanagerin, Hauptamtl. Mitarbeiterin, Büro, Administration, Kursanm.</dd>
+            <dd><a href="mailto:marketta.eksymae@kulturhaus-suederelbe.de">marketta.eksymae@kulturhaus-suederelbe.de</a></dd>
+          </dl>
+
+            <p><b>Zum Team gehören auch</b> alle Kurs- und ProjektleiterInnen im Rahmen des Kulturhaus-Angebtotes, die oft weit über den vereinbarten Umfang ehrenamtlich bei der Programmplanung und bei Realisierung und Durchführung einzelner Veranstaltungen mitwirken.</p>
+
+            <p><b>Herzlichen Dank auch an alle Vereinsmitglieder für ihren großen ehrenamtlichen Einsatz und Unterstützung!</b></p>
+
+            <p><a href="resources/Beitritserkl$C3$A4rung_Einz_aktuell.pdf" target="_blank"><b>Antragsformular auf Mitgliedschaft in userem Verein finden Sie hier zum Download</b></a></p>
+
+            <h2>Der Vereinsvorstand (Ehrenämter)</h2>
+            <dl>
+            <dt>Hannelore Bobeck-Nicculescu</dt>
+            <dd>2. Vorsitzender</dd>
+            <dt>Stephan Kaiser</dt>
+            <dd>1. Vorsitzender</dd>
+            <dt>Winfried Wöhlke</dt>
+            <dd>Schatzmeister</dd>
+            </dl>
+
+            <h2>Impressum</h2>
+            <p>
+            Kulturhaus Süderelbe e.V.<br>
+            Vereinsregister: Amtsgericht Hamburg, VR Nr. 8326<br>
+            Vertretungsberechtigt: Hannelore Bobeck-Niculescu, Stephan Kaiser<br>
+            Steuernr. 17/432/05266, Finanzamt Hamburg-Nord
+            </p>
+
+            <h3>Webseite</h3>
+            <p>Leila Marketta Eksymä und Dörte Ellerbrock</p>
+
+            <p>Verantwortlich im Sinne des Pressegesetzes: Hannelore Bobeck-Niculsecu, Stephan Kaiser</p>
+
+            <p>Alle Angaben auf dieser Internetseite dienen nur der Information. Sie erheben weder Anspruch auf Vollständigkeit, noch auf Richtigkeit. Änderungen bleiben vorbehalten.</p>
         </td>
       </tr>
     </table>
