--- a/cleaned/index.html
+++ b/cleaned/index.html
@@ -80,16 +80,16 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table width="299">
+          <table>
             <tbody>
               <tr align="center">
                 <td valign="top">
-                  <img src="resources/KH_Luftballon_web.jpg" width="425" height="243" border="0">
+                  <img src="resources/KH_Luftballon_web.jpg">
                 </td>
               </tr>
               <tr>
                 <td valign="top">
-                  Das Kulturhaus Süderelbe wird betrieben von dem gemeinnützigen Verein "Kulturhaus Süderelbe e.V." Es wird über die Stadtteilkulturmittel der Kulturbehörde Hamburg bzw. das Bezirksamt Harburg zum großen Teil finanziert; Projektmittel ergänzen die Finanzierung. Wer unsere Arbeit unterstützen möchte, kann mit dem jährlichen Beitrag von € 24,- Mitglied werden. In der Mitgliederversammlung unseres Vereins am 12. November 15 wurde der Vereinsvorstand wie folgt neu gewählt: 1. Vors.: Stephan Kaiser 2. Vors.: Hannelore Bobeck-Niculescu Schatzmeister: Winfried Wöhlke ____________________________________________________ Das Kulturhaus Süderelbe befindet sich direkt am S-Bahnhof Neugraben im ersten Stockwerk des <img src="resources/_wsb_154x81_BGZ_Logo_rgb_transparent_HG.jpg" width="154" height="81" border="0"> und ist über einen Fahrstuhl barrierefrei zu erreichen.
+                  Das Kulturhaus Süderelbe wird betrieben von dem gemeinnützigen Verein "Kulturhaus Süderelbe e.V." Es wird über die Stadtteilkulturmittel der Kulturbehörde Hamburg bzw. das Bezirksamt Harburg zum großen Teil finanziert; Projektmittel ergänzen die Finanzierung. Wer unsere Arbeit unterstützen möchte, kann mit dem jährlichen Beitrag von € 24,- Mitglied werden. In der Mitgliederversammlung unseres Vereins am 12. November 15 wurde der Vereinsvorstand wie folgt neu gewählt: 1. Vors.: Stephan Kaiser 2. Vors.: Hannelore Bobeck-Niculescu Schatzmeister: Winfried Wöhlke ____________________________________________________ Das Kulturhaus Süderelbe befindet sich direkt am S-Bahnhof Neugraben im ersten Stockwerk des <img src="resources/_wsb_154x81_BGZ_Logo_rgb_transparent_HG.jpg"> und ist über einen Fahrstuhl barrierefrei zu erreichen.
                 </td>
               </tr>
               <tr>
@@ -123,19 +123,19 @@
             <tbody>
               <tr>
                 <td>
-                  <img src="resources/_wsb_108x113_Foto+Aliou+Badji-Kachel.jpg" width="108" height="113" border="0">
+                  <img src="resources/_wsb_108x113_Foto+Aliou+Badji-Kachel.jpg">
                 </td>
                 <td>
-                  <img src="resources/_wsb_115x115_KHS1+172-A2.jpg" width="7016" height="4961" border="0">
+                  <img src="resources/_wsb_115x115_KHS1+172-A2.jpg">
                 </td>
                 <td></td>
                 <td>
-                  <img src="resources/_wsb_114x115_Kachel+$C3$96lmalerei.jpg" width="591" height="591" border="0">
+                  <img src="resources/_wsb_114x115_Kachel+$C3$96lmalerei.jpg">
                 </td>
               </tr>
             </tbody>
           </table>
-          <table width="510">
+          <table>
             <tbody>
               <tr>
                 <td>
